@@ -264,7 +264,7 @@ xtcRun {
     /*
     * Add a JVM argument to the defaults. Will be ignored if the launch does not spawn a forked JVM for its run.
     */
-    jvmArgs("-showversion")
+    jvmArgs("-showversion", "--enable-preview")
 
     /**
      * The default runXtc task is configured to run what is here in the xtcRun configuration.
